# road-glyph

./: .gitignore  README.md  start_eval_roadglyph_v3.py
real_vehicle_deployment/: CMakeLists.txt  MANUAL_inference_v3.md  can_smoothness.py  eval_metrics.py  inference_v3.cpp  preprocess_cuda.cu  preprocess_cuda.cuh  tune_defaults.cfg
roadglyph/: config.py  config_v3.py  train_v3.py
roadglyph/ablation/: README.md  aggregate_results.py  compute_delta_wp.py  results_ablation.csv  results_ablation.md  run_inference_ablation.py
roadglyph/callbacks/: visualise.py
roadglyph/config/: config.yaml  config_v3.yaml
roadglyph/config/data_module/: td_bucket_v12.yaml  td_no_buckets.yaml
roadglyph/config/experiment/: ablate_A1_no_acm.yaml  ablate_A2_token_agnostic.yaml  ablate_B1_single_pass.yaml  ablate_B2_lon_shortcut.yaml  ablate_C1_no_gt.yaml  ablate_C2_no_grad_mask.yaml  ablation_baseline.yaml  ablation_full.yaml  ablation_full_route_wp.yaml  debug.yaml  road_glyph_1.yaml  td_v2.yaml  td_v3.yaml
roadglyph/data_generation/: slots_generator.py  template_id_generator.py
roadglyph/dataloader/: datamodule.py  datamodule_v3.py  dataset.py  dataset_v3.py
roadglyph/models/: road_glyph.py  road_glyph_v2.py  road_glyph_v3.py
roadglyph/models/encoder/: internvit.py
roadglyph/tools/: commentary_template.py  list_reasons.py  make_template_id_report_routes.py  route_action_summary.csv  route_action_summary.py  speed_action_summary.csv  speed_action_summary.py  t_route_action_summary.py  template_id_report.xlsx  template_id_summary.csv  total_summary.py  total_template_summary.csv  unique_commentary_templates.csv  unique_commentary_templates.py
roadglyph/utils/: custom_types.py  custom_types_v3.py
team_code/: agent_road_glyph.py  agent_road_glyph_v3.py
